--- a/styles/gamerzone.css
+++ b/styles/gamerzone.css
@@ -10,6 +10,10 @@
 /* ==========================================================================
    SHARED_STYLES
    ========================================================================== */
+.max-width {
+  max-width: 1500px;
+  margin: 0 auto;
+}
 img {
   width: 100%;
 }
@@ -39,10 +43,6 @@ i {
   text-transform: uppercase;
 }
 /* nav_styles */
-header {
-  max-width: 1500px;
-  margin: 0 auto;
-}
 .menu-items-container {
   display: flex;
   justify-content: space-between;
@@ -120,6 +120,39 @@ header {
   background: #4ec5f7;
   padding: 20px 40px;
   text-transform: uppercase;
+}
+
+/* funny_videos_styles */
+.funny-videos-container {
+  text-align: center;
+  margin-top: 120px;
+}
+.funny-videos-container h1,
+.funny-videos-container p {
+  margin-bottom: 30px;
+}
+.funny-videos-container span {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3rem;
+}
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  gap: 25px;
+}
+.card {
+  max-width: 340px;
+  text-align: left;
+}
+.card :hover {
+  background-color: aliceblue;
+}
+.card-description {
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 
 /* ==========================================================================
