--- a/styles/gamerzone.css
+++ b/styles/gamerzone.css
@@ -49,7 +49,7 @@ i {
   align-items: center;
   padding: 40px;
 }
-.menu-items-logo {
+.logo-container {
   display: flex;
 }
 .logo-img {
@@ -147,9 +147,6 @@ i {
   max-width: 340px;
   text-align: left;
 }
-.card :hover {
-  background-color: aliceblue;
-}
 .card-description {
   font-size: 1.25rem;
   font-weight: 500;
@@ -172,7 +169,7 @@ i {
   .logo-title {
     font-size: 1.5rem;
   }
-  .menu-items-logo {
+  .logo-container {
     width: 50%;
     margin: 0 auto;
   }
@@ -196,7 +193,7 @@ i {
     flex-direction: column-reverse;
     gap: 70px;
   }
-  .menu-items-logo {
+  .logo-container {
     width: 40%;
     margin: 0 auto;
   }
