--- a/styles/gamerzone.css
+++ b/styles/gamerzone.css
@@ -168,12 +168,12 @@ i {
   justify-content: center;
 }
 .footer-logo > img {
-  max-width: 100px;
+  max-width: 80px;
 }
 
 .footer-options {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
   color: #fff;
   font-size: 1.125rem;
   font-weight: 600;
@@ -181,11 +181,13 @@ i {
 
 .footer-social-icons img {
   max-width: 50px;
-  margin-right: 50px;
+  padding: 20px;
 }
 .footer-terms {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.font-weight-500 {
   color: rgba(255, 255, 255, 0.6);
   font-weight: 500;
 }
@@ -217,6 +219,17 @@ i {
   }
   .sign-in-btn button {
     margin-top: 5px;
+  }
+  .footer-contents {
+    padding: 0;
+  }
+  .footer-options {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
+  .footer-terms {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
   }
 }
 
