--- a/styles/gamerzone.css
+++ b/styles/gamerzone.css
@@ -14,6 +14,12 @@
   max-width: 1500px;
   margin: 0 auto;
 }
+.theme-color {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 img {
   width: 100%;
 }
@@ -59,7 +65,7 @@ i {
   font-size: 2.8rem;
 }
 .logo-title span {
-  color: #ff42a5;
+  color: #f948b2;
 }
 .menu-items {
   display: flex;
@@ -93,10 +99,6 @@ i {
   background-repeat: no-repeat;
 }
 .section-title span {
-  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   font-size: 5.9375rem;
   font-weight: 800;
 }
@@ -134,10 +136,6 @@ i {
   margin-bottom: 30px;
 }
 .funny-videos-container span {
-  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   font-size: 3rem;
 }
 .cards-container {
