--- a/styles/gamerzone.css
+++ b/styles/gamerzone.css
@@ -183,14 +183,11 @@ i {
     rgba(255, 66, 165, 0.03) 0%,
     rgba(255, 66, 165, 0.03) 100%
   );
-  padding: 120px 300px;
-}
-.category-1,
-.category-2 {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  place-items: right;
   gap: 30px;
-  margin-bottom: 30px;
+  padding: 120px 300px;
 }
 .game-category {
   background: white;
@@ -280,7 +277,8 @@ i {
   .features-container {
     padding: 0;
   }
-  .features-contents {
+  .features-contents,
+  .game-categories-container {
     text-align: center;
     padding: 20px;
   }
@@ -292,7 +290,8 @@ i {
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
   }
-  .footer-terms {
+  .footer-terms,
+  .game-categories-container {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
@@ -323,6 +322,13 @@ i {
   }
   .features-contents > p {
     max-width: 100%;
+  }
+  .game-categories-container {
+    padding: 100px;
+  }
+  .game-categories-container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
   }
   .footer-contents,
   .features-contents {
