game category hover effect optimized

--- a/styles/gamerzone.css
+++ b/styles/gamerzone.css
@@ -203,15 +203,15 @@ i {
   padding: 10px 0;
   gap: 15px;
 }
-.btn1:hover,
-.btn2:hover,
-.btn3:hover,
-.btn4:hover,
-.btn5:hover,
-.btn6:hover,
-.btn7:hover,
-.btn8:hover,
-.btn9:hover {
+#btn1:hover,
+#btn2:hover,
+#btn3:hover,
+#btn4:hover,
+#btn5:hover,
+#btn6:hover,
+#btn7:hover,
+#btn8:hover,
+#btn9:hover {
   cursor: pointer;
   border: 2px solid #ff42a5;
   color: #ff42a5;
